WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296936
[Navigation API] Fix unhandled promise rejection in intercept handlers.
https://bugs.webkit.org/show_bug.cgi?id=296936
Summary
[Navigation API] Fix unhandled promise rejection in intercept handlers.
Basuke Suzuki
Reported
2025-08-05 09:30:10 PDT
Many of the tests in wet/navigation-api/ produces "Unhandled Promise Rejection: XXX" errors in expected files.
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2025-08-05 10:33:18 PDT
rdar://157494581
Radar WebKit Bug Importer
Comment 2
2025-08-12 09:31:12 PDT
<
rdar://problem/158138764
>
Basuke Suzuki
Comment 3
2025-08-12 09:54:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49258
Basuke Suzuki
Comment 4
2025-08-12 10:54:36 PDT
***
Bug 297222
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2025-08-13 13:16:38 PDT
Committed
298647@main
(2eef61ccd0ff): <
https://commits.webkit.org/298647@main
> Reviewed commits have been landed. Closing PR #49258 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug